# cookiecutter-flask-signalbus

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.app_slug}}/: .dir-locals.el  .dockerignore  .env  .projectile  Dockerfile  README.rst  docker-compose.yml  env.development  env.production  flush_signalbus.py  pyproject.toml  pytest.ini  tasks.py  wsgi.py
{{cookiecutter.app_slug}}/docker/: entrypoint.sh  flush_signalbus.py  logging.conf  supervisord.conf
{{cookiecutter.app_slug}}/src/{{cookiecutter.app_slug}}/: __init__.py  models.py
{{cookiecutter.app_slug}}/tests/: conftest.py  test_{{cookiecutter.app_slug}}.py
{{cookiecutter.app_slug}}/{{cookiecutter.app_slug}}/: __init__.py  cli.py  extensions.py  tasks.py
