[tool.poetry]
name = "{{cookiecutter.app_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.5"
pudb = "*"
flask-env = "^2.0"
flask-migrate = "^2.4"
flask_signalbus = "^0.4.0"
flask_melodramatiq = "^0.3.4"
psycopg2-binary = "^2.8"
mysql-connector = "^2.2"
dramatiq = {version = "^1.5",extras = ["rabbitmq", "watch"]}

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-pudb = "^0.7.0"
pytest-mock = "^1.10"
pytest-dotenv = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
